@@ -179,7 +179,7 @@
 #
 # Inactive when commented out (Does not disable APFS partition synchronisation)
 #
-#ignore_help_apfs
+#decline_help_apfs
 
 # Prevent UEFI Windows "Secure Boot" from writing to Apple NVRAM. When this option is active,
 # RefindPlus will prevent UEFI Windows Secure Boot from writing to the NVRAM on Apple Firmware
@@ -208,7 +208,7 @@
 #
 # Inactive when commented out (Does not disable help with hidden_tags)
 #
-#disable_tag_help
+#decline_help_tags
 
 # RefindPlus will automatically enlarge icons and text when HiDPI screens are detected.
 # The detection is basic and based on detecting a minimum 1601px vertical resolution.
