@@ -30,7 +30,9 @@
   * Additional memory management improvements
 - Amends 'SyncAPFS' Implementation
   * This feature is now activated by default and has been removed from the configuration file
-  * Users can however deactivate it via the new 'ignore_help_apfs' configuration token
+  * Users can however deactivate it via the new 'decline_help_apfs' configuration token
+- Renames 'ignore_tag_help' as 'decline_help_tags'
+    * The 'decline_help_XYZ' format will be used for options to disable defaults (align with rEFInd)
 
 
 0.13.2.AG (03 Aug 2021):
